--- a/init.org
+++ b/init.org
@@ -174,6 +174,7 @@ Lars Tveito's excellent [[https://github.com/larstvei/dot-emacs/blob/master/init
                              company-quickhelp
                              company-tern
                              discover-my-major
+                             dockerfile-mode
                              edit-server
                              emmet-mode
                              expand-region
