--- a/init.org
+++ b/init.org
@@ -1366,6 +1366,7 @@ Lars Tveito's excellent [[https://github.com/larstvei/dot-emacs/blob/master/init
      #+BEGIN_SRC emacs-lisp
        (with-eval-after-load 'octave
          (define-key octave-mode-map (kbd "C-h a") nil)
+         (define-key octave-mode-map (kbd "C-c C-z") #'inferior-octave)
          (define-key inferior-octave-mode-map (kbd "C-h a") nil)
          (define-key inferior-octave-mode-map [remap inferior-octave-dynamic-list-input-ring] #'helm-comint-input-ring))
      #+END_SRC
