--- a/init.org
+++ b/init.org
@@ -179,6 +179,7 @@ Lars Tveito's excellent [[https://github.com/larstvei/dot-emacs/blob/master/init
                              dockerfile-mode
                              edit-server
                              emmet-mode
+                             eros
                              expand-region
                              flycheck
                              flycheck-color-mode-line
@@ -732,6 +733,12 @@ Lars Tveito's excellent [[https://github.com/larstvei/dot-emacs/blob/master/init
                ("stackoverflow\\.com" . markdown-mode)))
      #+END_SRC
 ** Elisp
+   - Use [[https://github.com/xiongtx/eros][eros]], which displays evaluation result overlays.
+
+     #+BEGIN_SRC emacs-lisp
+       (eros-mode 1)
+     #+END_SRC
+
    - Use [[http://www.emacswiki.org/emacs/ElDoc][eldoc-mode]], which shows function signatures in the echo area.
 
    #+BEGIN_SRC emacs-lisp :tangle yes
