--- a/init.org
+++ b/init.org
@@ -2049,6 +2049,7 @@ Lars Tveito's excellent [[https://github.com/larstvei/dot-emacs/blob/master/init
          "
        Windows                                                             [_q_] quit
        ^------------------------------------------------------------------------------
+       [_c_]     ^^center
        [_-_]/[_=_] vertical shrink / enlarge
        [_[_]/[_]_] horizontal shrink / enlarge
        [_b_]     ^^balance
@@ -2061,6 +2062,7 @@ Lars Tveito's excellent [[https://github.com/larstvei/dot-emacs/blob/master/init
        ("-" (shrink-window 3) nil)
        ("=" (enlarge-window 3) nil)
        ("b" balance-windows nil)
+       ("c" (centered-window-mode-toggle) nil)
        ("o" (other-window 1) nil)
        ("O" (other-window -1) nil)
        ("r" *-rotate-buffers-in-windows nil)
